# backend

./: .Cargo.toml.swp  .gitignore  Cargo.toml  Dockerfile  README.md  apprunner.yaml  create-tables.sql  create-team.sql  database.db  docker-compose.yml  startup-tec-tables.sql  temp-values.sql
database_information/: create-tables.sql  delete.sql  mysql-create-tables.sql  mysql-temp-values.sql  psql-create-tables.sql  psql-temp-values.sql
jsons/: create_team_test.json
sign-in/: mysql-sign-into-database.zsh  psql-sign-into-database.zsh  temp.zsh
src/: .lib.rs.swp  .main.rs.swp  lib.rs  main.rs  past.rs
