[package]
name = "star-tec-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "mysql", "macros"] }
sqlite = "0.30.4"
