[package]
name = "star-tec-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "mysql", "macros", "time"] }
sqlite = "0.30.4"
env_logger = "0.10.0"
derive_more = "0.99.17"
